[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://Main.gd" id=1]
[ext_resource type="PackedScene" path="res://Ball.tscn" id=2]
[ext_resource type="PackedScene" path="res://DaggerBall.tscn" id=3]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2(200, 18)

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Walls" type="Node2D" parent="."]

[node name="WallBottom" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallBottom"]
shape = SubResource( 1 )

[node name="Visual" type="ColorRect" parent="Walls/WallBottom"]
color = Color(0, 0, 0, 1)

[node name="BallLeft" parent="." instance=ExtResource( 2 )]

[node name="BallRight" parent="." instance=ExtResource( 3 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="LeftStats" type="Label" parent="UI"]
offset_left = 24.0
offset_top = 580.0
offset_right = 240.0
offset_bottom = 650.0
text = "Damage Taken: 0\nDamage: 1"
horizontal_alignment = 0

[node name="RightStats" type="Label" parent="UI"]
offset_left = 520.0
offset_top = 580.0
offset_right = 720.0
offset_bottom = 650.0
text = "Damage Taken: 0\nDamage: 1"
horizontal_alignment = 2
